refactor: database model
